--- a/app/src/main/res/layout/activity_scan_result.xml
+++ b/app/src/main/res/layout/activity_scan_result.xml
@@ -43,9 +43,9 @@
         android:textColor="#293942"
         android:textSize="28sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
-        app:layout_constraintStart_toEndOf="@+id/btnBack"
-        app:layout_constraintTop_toTopOf="@+id/btnBack" />
+        app:layout_constraintBottom_toBottomOf="@+id/button_Back"
+        app:layout_constraintStart_toEndOf="@+id/button_Back"
+        app:layout_constraintTop_toTopOf="@+id/button_Back" />
 
     <ImageView
         android:id="@+id/iv_photo_result"
