--- a/app/src/main/res/layout/activity_scan_result.xml
+++ b/app/src/main/res/layout/activity_scan_result.xml
@@ -54,6 +54,7 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="38dp"
         android:layout_marginEnd="23dp"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_app_bar" />
