--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -60,7 +60,7 @@
             android:layout_height="115dp"
             android:layout_marginTop="42dp"
             android:contentDescription="@string/image_profile"
-            android:src="@drawable/profpic"
+            android:src="@drawable/profile"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
