--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="colorDerby">#F3E2C7</color>
     <color name="colorStarkWhite">#CAC5C0</color>
     <color name="colorGulGrey">#9CADB3</color>
+    <color name="colorWhisper">#E9E7E7</color>
 </resources>
