feat: slicing ui page reset password

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="colorRed">#FF0000</color>
     <color name="colorGrey">#6D6A6A</color>
     <color name="colorGray3">#AFABAB</color>
+    <color name="colorGray1">#757474</color>
     <color name="gray5">#E9E7E7</color>
     <color name="colorFantasy">#F3E5D8</color>
     <color name="colorTrinidad">#C3542B</color>
