--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_next"
+        android:id="@+id/button_send"
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:layout_marginStart="32dp"
