--- a/app/src/main/res/layout/item_recommendation.xml
+++ b/app/src/main/res/layout/item_recommendation.xml
@@ -7,8 +7,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="68dp"
-        android:layout_height="87dp"
+        android:layout_width="87dp"
+        android:layout_height="68dp"
         android:layout_marginStart="22dp"
         android:backgroundTint="@color/colorDerby"
         app:cardCornerRadius="8dp"
@@ -21,11 +21,18 @@
 
             <TextView
                 android:id="@+id/textview_ingredient_name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="20dp"
-                android:textSize="6sp"
+                android:layout_marginEnd="8dp"
                 android:fontFamily="@font/inter_medium"
+                android:gravity="center_horizontal"
+                android:lines="2"
+                android:text="@string/ingredients"
+                android:textColor="@color/black"
+                android:textSize="11sp"
+                android:textStyle="normal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
