--- a/app/src/main/res/layout/item_suggest.xml
+++ b/app/src/main/res/layout/item_suggest.xml
@@ -5,10 +5,10 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/ivKulitku"
+        android:id="@+id/textview_suggest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:text="@string/tidur_teratur"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ivKulitku"
+        app:layout_constraintTop_toTopOf="@+id/textview_suggest"
         app:srcCompat="@drawable/dot_suggest" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
