--- a/app/src/main/res/layout/item_kubaca.xml
+++ b/app/src/main/res/layout/item_kubaca.xml
@@ -5,7 +5,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="216dp"
@@ -20,9 +19,8 @@
             android:layout_width="216dp"
             android:layout_height="264dp">
 
-
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/imageArticle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -44,7 +42,7 @@
                 android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+                app:layout_constraintTop_toBottomOf="@+id/imageArticle" />
 
             <TextView
                 android:id="@+id/tvDate"
