--- a/app/src/main/res/layout/item_kubuku.xml
+++ b/app/src/main/res/layout/item_kubuku.xml
@@ -1,65 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:id="@+id/cardView"
+        android:layout_width="186dp"
+        android:layout_height="224dp"
+        android:layout_marginStart="10dp"
         android:backgroundTint="@color/colorDesertStorm"
         app:cardCornerRadius="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/ivImageKubuku"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/tinea_versicolor" />
+            android:layout_width="186dp"
+            android:layout_height="206dp">
 
             <ImageView
-                android:id="@+id/imageView18"
+                android:id="@+id/imageArticle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/saved" />
+                app:srcCompat="@drawable/img_kubaca" />
 
             <TextView
-                android:id="@+id/tvTitleDisease"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/inter_bold"
-                android:text="@string/title_disease"
-                android:textSize="15sp"
-                app:layout_constraintStart_toEndOf="@+id/ivImageKubuku"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tvDescDisease"
+                android:id="@+id/tvTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:fontFamily="@font/inter_medium"
-                android:text="@string/desc_disease"
-                android:textSize="8sp"
-                app:layout_constraintEnd_toStartOf="@+id/imageView18"
-                app:layout_constraintStart_toStartOf="@+id/tvTitleDisease"
-                app:layout_constraintTop_toBottomOf="@+id/tvTitleDisease" />
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="6dp"
+                android:fontFamily="@font/inter_bold"
+                android:gravity="center|center_horizontal"
+                android:text="@string/title_kubaca_exp"
+                android:textSize="13sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageArticle" />
+
+            <TextView
+                android:id="@+id/tvDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/date_kubaca"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="@+id/tvTitle"
+                app:layout_constraintStart_toStartOf="@+id/tvTitle"
+                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="71dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="-30dp"
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="@+id/cardView"
+        app:layout_constraintStart_toStartOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:srcCompat="@drawable/logo_kubaca" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
