--- a/app/src/main/res/layout/fragment_home_base.xml
+++ b/app/src/main/res/layout/fragment_home_base.xml
@@ -184,7 +184,7 @@
                 app:srcCompat="@drawable/button_more" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvKubaca"
+                android:id="@+id/rvKubuku"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -207,7 +207,7 @@
                 android:text="@string/kulitku"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rvKubaca" />
+                app:layout_constraintTop_toBottomOf="@+id/rvKubuku" />
 
             <TextView
                 android:id="@+id/textView10"
